--- a/game-app/src/assets/css/main.css
+++ b/game-app/src/assets/css/main.css
@@ -63,31 +63,8 @@ h1, h2, h3, h4, h5, h6 {
   .toast-message.active {
     top: 0px; }
 
-.animated {
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both; }
-
-@-webkit-keyframes fadeInRight {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(20px); }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0); } }
-@keyframes fadeInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(20px); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-.fadeInRight {
-  -webkit-animation-name: fadeInRight;
-  animation-name: fadeInRight; }
-
 .modal {
+  display: none;
   background-color: #fff;
   position: absolute;
   top: 50%;
@@ -215,5 +192,36 @@ h1, h2, h3, h4, h5, h6 {
   .winner .box h4 {
     font-size: 40px;
     margin: 40px 0; }
+
+.animated {
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+@-webkit-keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(20px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0); } }
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(20px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+.fadeInRight {
+  -webkit-animation-name: fadeInRight;
+  animation-name: fadeInRight; }
+
+.stadistics {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 60px 80px; }
 
 /*# sourceMappingURL=main.css.map */
