--- a/game-app/src/assets/scss/_common.scss
+++ b/game-app/src/assets/scss/_common.scss
@@ -93,41 +93,8 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-.animated {
-    -webkit-animation-duration: 0.5s;
-    animation-duration: 0.5s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
- }
- 
- @-webkit-keyframes fadeInRight {
-    0% {
-       opacity: 0;
-       -webkit-transform: translateX(20px);
-    }
-    100% {
-       opacity: 1;
-       -webkit-transform: translateX(0);
-    }
- }
- 
- @keyframes fadeInRight {
-    0% {
-       opacity: 0;
-       transform: translateX(20px);
-    }
-    100% {
-       opacity: 1;
-       transform: translateX(0);
-    }
- }
- 
- .fadeInRight {
-    -webkit-animation-name: fadeInRight;
-    animation-name: fadeInRight;
- }
-
  .modal {
+     display: none;
      background-color: $white;
      @include centerVH();
      width: 50vw;
