--- a/game-app/src/assets/scss/_stadistics-page.scss
+++ b/game-app/src/assets/scss/_stadistics-page.scss
@@ -1,4 +1,32 @@
 .stadistics {
     @include centerVH;
     padding: 60px 80px;
+    ul {
+        list-style: none;
+        margin: 40px 0 0 0;
+        padding: 0 30px;
+        max-height: 500px;
+        overflow-y: scroll;
+        li {
+            margin-bottom: 20px;
+            .position {
+                background-color: $red;
+                border-radius: 50px;
+                width: 30px;
+                height: 30px;
+                text-align: center;
+                display: inline-block;
+                margin-right: 30px;
+                span {
+                    line-height: 30px;
+                    color: $white;
+                }
+            }
+            .player {
+                width: 200px;
+                display: inline-block;
+                margin-right: 30px;
+            }
+        }
+    }
 }
