--- a/game-app/src/assets/css/main.css
+++ b/game-app/src/assets/css/main.css
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .gameplay .round-content {
   padding: 30px 50px;
-  width: 50vw;
+  width: 65vw;
   min-height: 390px;
   position: absolute;
   top: 50%;
@@ -174,25 +174,26 @@ h1, h2, h3, h4, h5, h6 {
       .gameplay .round-content .center .results h3 {
         margin-bottom: 20px; }
       .gameplay .round-content .center .results .score-list .list {
+        padding: 0;
         list-style: none; }
         .gameplay .round-content .center .results .score-list .list li {
-          margin-bottom: 10px; }
-          .gameplay .round-content .center .results .score-list .list li span.tag {
-            color: #fff;
-            padding: 10px;
-            font-family: Roboto-Light;
-            border-radius: 3px;
-            display: inline-block;
-            width: 130px; }
-          .gameplay .round-content .center .results .score-list .list li span.round {
-            background-color: #E3423C; }
-          .gameplay .round-content .center .results .score-list .list li span.winner {
-            background-color: #069e43;
-            color: #fff; }
-          .gameplay .round-content .center .results .score-list .list li i {
-            position: relative;
-            top: 7px;
-            margin: 0 20px; }
+          margin: 10px 0;
+          height: 40px; }
+          .gameplay .round-content .center .results .score-list .list li .item {
+            float: left;
+            width: 50%; }
+            .gameplay .round-content .center .results .score-list .list li .item span.tag {
+              color: #fff;
+              padding: 10px;
+              font-family: Roboto-Light;
+              border-radius: 3px;
+              display: inline-block;
+              width: 130px; }
+            .gameplay .round-content .center .results .score-list .list li .item span.round {
+              background-color: #E3423C; }
+            .gameplay .round-content .center .results .score-list .list li .item span.winner {
+              background-color: #069e43;
+              color: #fff; }
 
 .winner .box {
   padding: 30px 50px;
