Fixes en server y app

--- a/game-app/src/assets/scss/main.scss
+++ b/game-app/src/assets/scss/main.scss
@@ -3,4 +3,5 @@
 @import "_gameplay-page";
 @import "_winner-page";
 @import "_effects";
-@import "_stadistics-page";
+@import "_leaderboard-page";
+@import "_config-page";
