--- a/game-app/src/assets/css/main.css
+++ b/game-app/src/assets/css/main.css
@@ -63,20 +63,6 @@ h1, h2, h3, h4, h5, h6 {
   .toast-message.active {
     top: 0px; }
 
-.modal {
-  display: none;
-  background-color: #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50vw;
-  min-height: 600px;
-  padding: 50px; }
-  .modal ul {
-    list-style: none;
-    margin-top: 40px; }
-
 .nav-menu {
   position: absolute;
   right: 30px;
@@ -264,5 +250,97 @@ h1, h2, h3, h4, h5, h6 {
         width: 200px;
         display: inline-block;
         margin-right: 30px; }
+
+.config {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px 50px; }
+  .config ul {
+    list-style: none;
+    margin: 30px 0;
+    padding: 0; }
+    .config ul li {
+      height: 50px; }
+      .config ul li label {
+        margin-right: 15px; }
+      .config ul li input {
+        border: 0;
+        border-bottom: 1px solid #000;
+        height: 30px;
+        font-family: Roboto-Regular;
+        font-size: 16px; }
+        .config ul li input:first-of-type {
+          margin-right: 20px; }
+        .config ul li input:focus {
+          outline: none; }
+      .config ul li .suggest-input {
+        display: inline-block;
+        position: relative; }
+        .config ul li .suggest-input .no-margin {
+          margin-right: 0; }
+        .config ul li .suggest-input ul {
+          position: absolute;
+          margin: 0;
+          padding: 0;
+          border: 1px solid #000;
+          border-top: none;
+          width: 100%; }
+          .config ul li .suggest-input ul li {
+            border-bottom: 1px solid #000;
+            padding: 10px;
+            height: 22px;
+            cursor: pointer; }
+            .config ul li .suggest-input ul li:last-of-type {
+              border-bottom: none; }
+            .config ul li .suggest-input ul li:hover {
+              background-color: #e6e6e6; }
+
+.modal {
+  z-index: 2;
+  height: 20vh; }
+  .modal h3 {
+    margin-bottom: 30px; }
+  .modal .item {
+    width: 50%;
+    float: left; }
+    .modal .item input {
+      border: 0;
+      border-bottom: 1px solid #000;
+      height: 30px;
+      font-family: Roboto-Regular;
+      font-size: 16px;
+      display: inline-block;
+      width: 100%; }
+      .modal .item input:first-of-type {
+        margin-right: 20px; }
+      .modal .item input:focus {
+        outline: none; }
+    .modal .item .suggest-input {
+      display: block;
+      position: relative; }
+      .modal .item .suggest-input .no-margin {
+        margin-right: 0; }
+      .modal .item .suggest-input ul {
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        border: 1px solid #000;
+        border-top: none;
+        width: 100%; }
+        .modal .item .suggest-input ul li {
+          border-bottom: 1px solid #000;
+          padding: 10px;
+          height: 22px;
+          cursor: pointer; }
+          .modal .item .suggest-input ul li:last-of-type {
+            border-bottom: none; }
+          .modal .item .suggest-input ul li:hover {
+            background-color: #e6e6e6; }
+  .modal button {
+    position: absolute;
+    bottom: 30px;
+    right: 30px; }
 
 /*# sourceMappingURL=main.css.map */
