--- a/game-app/src/assets/css/main.css
+++ b/game-app/src/assets/css/main.css
@@ -257,6 +257,12 @@ h1, h2, h3, h4, h5, h6 {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px 50px; }
+  .config .add-move {
+    position: absolute;
+    top: 40px;
+    right: 50px;
+    font-size: 13px;
+    padding: 4px 15px; }
   .config ul {
     list-style: none;
     margin: 30px 0;
@@ -270,7 +276,8 @@ h1, h2, h3, h4, h5, h6 {
         border-bottom: 1px solid #000;
         height: 30px;
         font-family: Roboto-Regular;
-        font-size: 16px; }
+        font-size: 16px;
+        text-transform: lowercase; }
         .config ul li input:first-of-type {
           margin-right: 20px; }
         .config ul li input:focus {
@@ -280,6 +287,8 @@ h1, h2, h3, h4, h5, h6 {
         position: relative; }
         .config ul li .suggest-input .no-margin {
           margin-right: 0; }
+        .config ul li .suggest-input input {
+          text-transform: lowercase; }
         .config ul li .suggest-input ul {
           position: absolute;
           margin: 0;
@@ -299,9 +308,15 @@ h1, h2, h3, h4, h5, h6 {
 
 .modal {
   z-index: 2;
-  height: 20vh; }
+  height: 30vh; }
   .modal h3 {
     margin-bottom: 30px; }
+  .modal img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 19px !important;
+    cursor: pointer; }
   .modal .item {
     width: 50%;
     float: left; }
@@ -312,7 +327,7 @@ h1, h2, h3, h4, h5, h6 {
       font-family: Roboto-Regular;
       font-size: 16px;
       display: inline-block;
-      width: 100%; }
+      text-transform: lowercase; }
       .modal .item input:first-of-type {
         margin-right: 20px; }
       .modal .item input:focus {
@@ -322,6 +337,9 @@ h1, h2, h3, h4, h5, h6 {
       position: relative; }
       .modal .item .suggest-input .no-margin {
         margin-right: 0; }
+      .modal .item .suggest-input input {
+        width: 100%;
+        text-transform: lowercase; }
       .modal .item .suggest-input ul {
         position: absolute;
         margin: 0;
@@ -338,9 +356,19 @@ h1, h2, h3, h4, h5, h6 {
             border-bottom: none; }
           .modal .item .suggest-input ul li:hover {
             background-color: #e6e6e6; }
-  .modal button {
+  .modal .btn-wrapper {
     position: absolute;
     bottom: 30px;
     right: 30px; }
+    .modal .btn-wrapper button {
+      font-size: 13px;
+      padding: 4px 15px; }
+      .modal .btn-wrapper button:first-of-type {
+        margin-right: 30px; }
+  .modal .error {
+    font-size: 14px;
+    color: #B00020;
+    display: block;
+    margin-top: 110px; }
 
 /*# sourceMappingURL=main.css.map */
