--- a/game-app/src/assets/scss/_config-page.scss
+++ b/game-app/src/assets/scss/_config-page.scss
@@ -1,6 +1,13 @@
 .config {
     @include centerVH;
     padding: 40px 50px;
+    .add-move {
+        position: absolute;
+        top: 40px;
+        right: 50px;
+        font-size: 13px;
+        padding: 4px 15px;
+    }
     ul {
         list-style: none;
         margin: 30px 0;
@@ -16,6 +23,7 @@
                 height: 30px;
                 font-family: Roboto-Regular;
                 font-size: 16px;
+                text-transform: lowercase;
                 &:first-of-type {
                     margin-right: 20px;
                 }
@@ -28,6 +36,9 @@
                 position: relative;
                 .no-margin {
                     margin-right: 0;
+                }
+                input {
+                    text-transform: lowercase;
                 }
                 ul {
                     position: absolute;
@@ -56,9 +67,16 @@
 
 .modal {
     z-index: 2;
-    height: 20vh;
+    height: 30vh;
     h3 {
         margin-bottom: 30px;
+    }
+    img {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 19px !important;
+        cursor: pointer;
     }
     .item {
         width: 50%;
@@ -70,7 +88,7 @@
             font-family: Roboto-Regular;
             font-size: 16px;
             display: inline-block;
-            width: 100%;
+            text-transform: lowercase;
             &:first-of-type {
                 margin-right: 20px;
             }
@@ -83,6 +101,10 @@
             position: relative;
             .no-margin {
                 margin-right: 0;
+            }
+            input {
+                width: 100%;
+                text-transform: lowercase;
             }
             ul {
                 position: absolute;
@@ -106,9 +128,22 @@
             }
         }
     }
-    button {
+    .btn-wrapper {
         position: absolute;
         bottom: 30px;
         right: 30px;
+        button {
+            &:first-of-type {
+                margin-right: 30px;
+            }
+            font-size: 13px;
+            padding: 4px 15px;
+        }
+    }
+    .error {
+        font-size: 14px;
+        color: $red;
+        display: block;
+        margin-top: 110px;
     }
 }
