--- a/game-app/src/assets/css/main.css
+++ b/game-app/src/assets/css/main.css
@@ -266,9 +266,12 @@ h1, h2, h3, h4, h5, h6 {
   .config ul {
     list-style: none;
     margin: 30px 0;
-    padding: 0; }
+    padding: 0;
+    overflow-y: scroll;
+    max-height: 150px; }
     .config ul li {
-      height: 50px; }
+      height: 50px;
+      margin-right: 15px; }
       .config ul li label {
         margin-right: 15px; }
       .config ul li input {
@@ -282,6 +285,8 @@ h1, h2, h3, h4, h5, h6 {
           margin-right: 20px; }
         .config ul li input:focus {
           outline: none; }
+        .config ul li input:disabled {
+          background-color: #fff; }
       .config ul li .suggest-input {
         display: inline-block;
         position: relative; }
@@ -346,11 +351,14 @@ h1, h2, h3, h4, h5, h6 {
         padding: 0;
         border: 1px solid #000;
         border-top: none;
-        width: 100%; }
+        width: 100%;
+        overflow: hidden;
+        background-color: #fff; }
         .modal .item .suggest-input ul li {
           border-bottom: 1px solid #000;
           padding: 10px;
           height: 22px;
+          margin-right: 0;
           cursor: pointer; }
           .modal .item .suggest-input ul li:last-of-type {
             border-bottom: none; }
