--- a/game-app/src/assets/scss/_config-page.scss
+++ b/game-app/src/assets/scss/_config-page.scss
@@ -12,8 +12,11 @@
         list-style: none;
         margin: 30px 0;
         padding: 0;
+        overflow-y: scroll;
+        max-height: 150px;
         li {
             height: 50px;
+            margin-right: 15px;
             label {
                 margin-right: 15px;
             }
@@ -29,6 +32,9 @@
                 }
                 &:focus {
                     outline: none;  
+                }
+                &:disabled {
+                    background-color: $white;
                 }
             }
             .suggest-input {
@@ -113,10 +119,13 @@
                 border: 1px solid $black;
                 border-top: none;
                 width: 100%;
+                overflow: hidden;
+                background-color: $white;
                 li {
                     border-bottom: 1px solid $black;
                     padding: 10px;
                     height: 22px;
+                    margin-right: 0;
                     cursor: pointer;
                     &:last-of-type {
                         border-bottom: none;
