--- a/game-app/src/assets/css/main.css
+++ b/game-app/src/assets/css/main.css
@@ -265,10 +265,10 @@ h1, h2, h3, h4, h5, h6 {
     padding: 4px 15px; }
   .config ul {
     list-style: none;
-    margin: 30px 0;
+    margin: 50px 0 30px 0;
     padding: 0;
     overflow-y: scroll;
-    max-height: 150px; }
+    height: 200px; }
     .config ul li {
       height: 50px;
       margin-right: 15px; }
@@ -300,7 +300,8 @@ h1, h2, h3, h4, h5, h6 {
           padding: 0;
           border: 1px solid #000;
           border-top: none;
-          width: 100%; }
+          width: 100%;
+          height: auto; }
           .config ul li .suggest-input ul li {
             border-bottom: 1px solid #000;
             padding: 10px;
@@ -313,7 +314,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .modal {
   z-index: 2;
-  height: 30vh; }
+  height: 40vh; }
   .modal h3 {
     margin-bottom: 30px; }
   .modal img {
