--- a/game-app/src/assets/scss/_config-page.scss
+++ b/game-app/src/assets/scss/_config-page.scss
@@ -10,10 +10,11 @@
     }
     ul {
         list-style: none;
-        margin: 30px 0;
+        margin: 50px 0 30px 0;
         padding: 0;
         overflow-y: scroll;
-        max-height: 150px;
+       
+        height: 200px;
         li {
             height: 50px;
             margin-right: 15px;
@@ -53,6 +54,7 @@
                     border: 1px solid $black;
                     border-top: none;
                     width: 100%;
+                    height: auto;
                     li {
                         border-bottom: 1px solid $black;
                         padding: 10px;
@@ -73,7 +75,7 @@
 
 .modal {
     z-index: 2;
-    height: 30vh;
+    height: 40vh;
     h3 {
         margin-bottom: 30px;
     }
